[package]
name = "ephemeris"
version = "0.2.0"
authors = ["Noel Martin <noel@noelmrtn.fr>"]
edition = "2018"

[[bin]]
name = "ephemeris"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
csv = "1.1.3"
nalgebra = "0.18"
piston = "0.52.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.73.0"
serde = { version = "1.0", features = ["derive"] }
